Changed URL to URI as a lightweight reference to resources. URL.equals would fail depending on the state of the internet, so it was not reliable. And it was blocking!